crates/wac-parser/tests/resolution/fail/mismatched-enum-count.wac
import x: interface {
    enum e {
        a,
        b,
        c,
        d,
    }
};

let i = new foo:bar { x };
